--- a/STARS/templates/register.html
+++ b/STARS/templates/register.html
@@ -85,7 +85,7 @@
             <hr class="sidebar-divider">
 
             <li class="nav-item">
-                <a class="nav-link" href="/relation">
+                <a class="nav-link" href="/relation" target="_blank">
                     <i class="fas fa-project-diagram"></i>
                     <span>Relation</span></a>
             </li>
